src/objects/Charket__WeChatCoupon__c.object
<CustomObject>
    <fields>
        <fullName>Charket__BrandName__c</fullName>
        <label>Brand Name</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>WeChat Coupons</relationshipLabel>
        <relationshipName>WeChatCoupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__CardId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Card ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__CodeType__c</fullName>
        <label>Code Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Barcode</fullName>
                </value>
                <value>
                    <fullName>QR Code</fullName>
                </value>
                <value>
                    <fullName>QR Code Only</fullName>
                </value>
                <value>
                    <fullName>Barcode Only</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__Color__c</fullName>
        <label>Color</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Color010</fullName>
                    <default>true</default>
                    <label>Color010</label>
                </value>
                <value>
                    <fullName>Color020</fullName>
                </value>
                <value>
                    <fullName>Color030</fullName>
                </value>
                <value>
                    <fullName>Color040</fullName>
                </value>
                <value>
                    <fullName>Color050</fullName>
                </value>
                <value>
                    <fullName>Color060</fullName>
                </value>
                <value>
                    <fullName>Color070</fullName>
                </value>
                <value>
                    <fullName>Color080</fullName>
                </value>
                <value>
                    <fullName>Color081</fullName>
                </value>
                <value>
                    <fullName>Color082</fullName>
                </value>
                <value>
                    <fullName>Color090</fullName>
                </value>
                <value>
                    <fullName>Color100</fullName>
                </value>
                <value>
                    <fullName>Color101</fullName>
                </value>
                <value>
                    <fullName>Color102</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__DateType__c</fullName>
        <label>Date Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Time Range</fullName>
                    <default>true</default>
                    <label>Fixed Time Range</label>
                </value>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__DealDetail__c</fullName>
        <label>Deal Detail</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__DefaultDetail__c</fullName>
        <label>Default Detail</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Description__c</fullName>
        <label>Description</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Discount__c</fullName>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__EndTime__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__FixedDaysValidAfter__c</fullName>
        <description>Fixed Begin Term</description>
        <label>Fixed Days Valid After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__FixedDaysValidFor__c</fullName>
        <label>Fixed Days Valid For</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__GiftDescription__c</fullName>
        <label>Gift Description</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__IconImage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Icon Image</label>
        <referenceTo>Charket__WeChatMessage__c</referenceTo>
        <relationshipLabel>WeChat Coupons (Icon Image)</relationshipLabel>
        <relationshipName>WeChat_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__IsExpired__c</fullName>
        <formula>Charket__EndTime__c &lt; NOW()</formula>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__LimitPerFollower__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Limit / Follower</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Charket__WeChatAccount__c</field>
                <operation>equals</operation>
                <valueField>Charket__WeChatMessage__c.Charket__WeChatAccount__c</valueField>
            </filterItems>
            <filterItems>
                <field>Charket__WeChatMessage__c.Charket__Type__c</field>
                <operation>equals</operation>
                <value>Image</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Charket__WeChatMessage__c</referenceTo>
        <relationshipLabel>WeChat Coupons</relationshipLabel>
        <relationshipName>WeChatCoupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__MinimumRequiredExpense__c</fullName>
        <description>Least Cost</description>
        <label>Minimum Required Expense (Cent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Notice__c</fullName>
        <label>Notice</label>
        <length>48</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__SavedAmount__c</fullName>
        <description>Reduce Cost</description>
        <label>Saved Amount (Cent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__ServicePhone__c</fullName>
        <label>Service Phone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ShortDescription__c</fullName>
        <description>Abstract</description>
        <label>Short Description</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__SubTitle__c</fullName>
        <label>Sub Title</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>General Coupon</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Groupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Coupons</relationshipLabel>
        <relationshipName>WeChatCoupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WeChat Coupon</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Charket__Cash_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__Type__c ,&apos;Cash&apos;), ISBLANK(Charket__MinimumRequiredExpense__c))</errorConditionFormula>
        <errorDisplayField>Charket__MinimumRequiredExpense__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Cash_ReduceCost_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__Type__c ,&apos;Cash&apos;), ISBLANK(Charket__SavedAmount__c))</errorConditionFormula>
        <errorDisplayField>Charket__SavedAmount__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Date_Type_Fix_Begin_Term_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__DateType__c  ,&apos;Fixed Term&apos;), ISBLANK(Charket__FixedDaysValidAfter__c))</errorConditionFormula>
        <errorDisplayField>Charket__FixedDaysValidAfter__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Date_Type_Fixed_Term_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__DateType__c  ,&apos;Fixed Term&apos;), ISBLANK(Charket__FixedDaysValidFor__c))</errorConditionFormula>
        <errorDisplayField>Charket__FixedDaysValidFor__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Date_Type_Fixed_Time_Range_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__DateType__c  ,&apos;Fixed Time Range&apos;), ISBLANK(Charket__StartTime__c))</errorConditionFormula>
        <errorDisplayField>Charket__StartTime__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Discount_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__Type__c ,&apos;Discount&apos;), ISBLANK(Charket__Discount__c))</errorConditionFormula>
        <errorDisplayField>Charket__Discount__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Fixed_Term_Time_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Charket__StartTime__c  &gt; Charket__EndTime__c</errorConditionFormula>
        <errorDisplayField>Charket__StartTime__c</errorDisplayField>
        <errorMessage>The coupon end time should not be before the start time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__General_Coupon_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__Type__c ,&apos;General Coupon&apos;), ISBLANK(Charket__DefaultDetail__c))</errorConditionFormula>
        <errorDisplayField>Charket__DefaultDetail__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Gift_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__Type__c ,&apos;Gift&apos;), ISBLANK(Charket__GiftDescription__c))</errorConditionFormula>
        <errorDisplayField>Charket__GiftDescription__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Groupon_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Charket__Type__c ,&apos;GroupOn&apos;), ISBLANK(Charket__DealDetail__c))</errorConditionFormula>
        <errorDisplayField>Charket__DealDetail__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Quantity_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Charket__LimitPerFollower__c &gt; Charket__Quantity__c</errorConditionFormula>
        <errorMessage>The Limit Per Follower can&apos;t larger than Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Title_Length_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name) &gt; 27</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Title value can contain 27 characters at most.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Update_Advanced_Info_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
          OR(ISPICKVAL(Charket__Status__c, &apos;Approved&apos;), ISPICKVAL(Charket__Status__c, &apos;Delivered&apos;)),
          OR( ISCHANGED(Charket__ShortDescription__c),ISCHANGED(Charket__IconImage__c))
        )</errorConditionFormula>
        <errorMessage>These fields (Short Description, Icon Image) can&apos;t be edit when this coupon has been approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Update_Base_Info_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
              OR(ISPICKVAL(Charket__Status__c, &apos;Approved&apos;), ISPICKVAL(Charket__Status__c, &apos;Delivered&apos;)),
              OR( ISCHANGED(Charket__WeChatAccount__c),IsCHANGED(Charket__Type__c), ISCHANGED(Name),ISCHANGED(Charket__BrandName__c),
                ISCHANGED(Charket__CardId__c),ISCHANGED(Charket__Quantity__c),
                ISCHANGED(Charket__DealDetail__c),ISCHANGED(Charket__DefaultDetail__c),
                ISCHANGED(Charket__Discount__c),ISCHANGED(Charket__GiftDescription__c),
                ISCHANGED(Charket__MinimumRequiredExpense__c),ISCHANGED(Charket__SavedAmount__c),
                ISCHANGED(Charket__FixedDaysValidAfter__c),ISCHANGED(Charket__FixedDaysValidFor__c),ISCHANGED(Charket__DateType__c),
                ISCHANGED(Charket__StartTime__c), ISCHANGED(Charket__EndTime__c))
            )</errorConditionFormula>
        <errorMessage>These fields (WeChat Account, Type, Title, Brand Name, Card Id, Quantity, Deal Detail, Default Detail, Discount, Gift, Least Cost, Reduce Cost, Fixed Begin Term, Fixed Term, Date Type, Start Time,End Time) can&apos;t be edit when this coupon has been approved.</errorMessage>
    </validationRules>
</CustomObject>